--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Panther",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+    "node": "17.0",
+    "npm": "8.1"
+  }
 }
