--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "telegram-bot",
-  "version": "1.0.0",
-  "description": "",
+  "name": "heroku-node-telegram-bot",
+  "version": "1.0.3",
+  "description": "Starter pack for running telegram bot on the Heroku using Node.js",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "Panther",
+  "author": "panther",
   "license": "ISC",
-  "engines": {
-    "node": "17.0",
-    "npm": "8.1"
+  "dependencies": {
+    "node-telegram-bot-api": "^0.30.0"
   }
 }
