--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "author": "Panther",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "web3": "^1.7.4"
+  }
 }
