--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "panther",
   "license": "ISC",
   "dependencies": {
-    "node-telegram-bot-api": "^0.30.0"
+    "node-telegram-bot-api": "^0.30.0",
+    "web3": "^1.7.4"
   }
 }
